--- a/styles/main.css
+++ b/styles/main.css
@@ -57,57 +57,65 @@ body {
   width: 100%;
   z-index: -1; }
 
-.topAnimations .animation_right {
-  position: absolute;
-  top: -20.83333vw;
-  right: 2.96875vw;
-  z-index: 10; }
-
-.topAnimations .animation_right img {
-  width: 46.71875vw;
-  height: 46.71875vw; }
-
-.topAnimations .animation_left {
+.svg_animations .circle-top-left {
   position: absolute;
   top: -12.76042vw;
   left: -9.27083vw;
   z-index: 10; }
 
-.topAnimations .animation_left img {
+.svg_animations .circle-top-left img {
   width: 28.90625vw;
   height: 28.90625vw; }
 
-.topAnimations .animation_middle {
+.svg_animations .circle-top-right {
+  position: absolute;
+  top: -20.83333vw;
+  right: 2.96875vw;
+  z-index: 10; }
+
+.svg_animations .circle-top-right img {
+  width: 46.71875vw;
+  height: 46.71875vw; }
+
+.svg_animations .circle-center-right {
   position: absolute;
   top: 32.96875vw;
   right: -47.39583vw;
   z-index: 10; }
 
-.topAnimations .animation_middle img {
+.svg_animations .circle-center-right img {
   width: 57.03125vw;
   height: 57.03125vw; }
 
-.topAnimations .animation_middle-left {
+.svg_animations .vector-center-left-1 {
   position: absolute;
   top: 57.39583vw;
   left: -0.20833vw;
   z-index: 10; }
 
-.topAnimations .animation_middle-left img {
-  width: 16.66667vw;
-  height: 15.78125vw; }
+.svg_animations .vector-center-left-1 svg {
+  width: 16.92708vw;
+  height: 16.14583vw; }
 
-.topAnimations .animation_center {
+.svg_animations .vector-center-left-2 {
   position: absolute;
   top: 76.35417vw;
-  left: -0.52083vw;
+  left: -1.5625vw;
   z-index: 0; }
 
-.topAnimations .animation_center_left {
+.svg_animations .vector-center-left-2 svg {
+  width: 21.82292vw;
+  height: 46.30208vw; }
+
+.svg_animations .vector-center-right {
   position: absolute;
   top: 84.0625vw;
   right: -1.45833vw;
   z-index: 0; }
+
+.svg_animations .vector-center-right svg {
+  width: 102.1875vw;
+  height: 36.04167vw; }
 
 .header {
   background: #0e0b27;
@@ -433,63 +441,155 @@ body {
   font-size: 0;
   margin: 0 auto 2.08333vw; }
 
-.slotMachines {
+.sliders {
   position: relative;
-  width: 57.8125vw;
+  width: 60.9375vw;
+  height: 0; }
+
+.sliders.active {
+  height: 100%;
   max-height: 24.47917vw;
   margin: 7.55208vw auto 0; }
 
-.slotMachines__wrapper {
+.sliders.active .sliders__arrowPrev {
+  border-top: 1.09375vw solid transparent;
+  border-bottom: 1.09375vw solid transparent;
+  border-right: 1.35417vw solid #C6A4E3; }
+
+.sliders.active .sliders__arrowPrev:hover {
+  border-right: 1.35417vw solid #9E55DD;
+  cursor: pointer; }
+
+.sliders.active .sliders__arrowNext {
+  border-top: 1.09375vw solid transparent;
+  border-bottom: 1.09375vw solid transparent;
+  border-left: 1.35417vw solid #C6A4E3; }
+
+.sliders.active .sliders__arrowNext:hover {
+  border-left: 1.35417vw solid #9E55DD;
+  cursor: pointer; }
+
+.sliders__wrapper {
   width: 100%;
   max-height: 100%;
   overflow-x: hidden; }
 
-.slotMachines__arrowPrev {
+.sliders__arrowPrev {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
   left: -2.34375vw;
   z-index: 20;
   width: 0;
-  height: 0;
-  border-top: 1.09375vw solid transparent;
-  border-bottom: 1.09375vw solid transparent;
-  border-right: 1.35417vw solid #C6A4E3; }
+  height: 0; }
 
-.slotMachines__arrowPrev:hover {
-  border-right: 1.35417vw solid #9E55DD;
-  cursor: pointer; }
-
-.slotMachines__arrowNext {
+.sliders__arrowNext {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
   right: -2.34375vw;
   z-index: 20;
   width: 0;
-  height: 0;
-  border-top: 1.09375vw solid transparent;
-  border-bottom: 1.09375vw solid transparent;
-  border-left: 1.35417vw solid #C6A4E3; }
+  height: 0; }
 
-.slotMachines__arrowNext:hover {
-  border-left: 1.35417vw solid #9E55DD;
-  cursor: pointer; }
-
-.slotMachines__slider {
+.slider {
   margin-right: -15.625vw;
   margin-left: -2.60417vw;
   max-height: 24.47917vw;
+  height: 100%;
   outline: none; }
 
-.slotMachines__slider .slide {
+.slider .slide {
   width: 24.47917vw;
-  max-height: 24.47917vw;
+  height: 24.47917vw;
   padding-right: 1.5625vw;
-  outline: none; }
+  z-index: 20;
+  outline: none;
+  position: relative; }
 
-.slotMachines__slider .slide img {
+.slider .slide span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   width: 100%;
-  height: 1005;
+  height: 100%;
+  background: rgba(14, 11, 39, 0.4); }
+
+.slider .slide img {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   object-position: 50% 50%; }
+
+.gallery__wrapper {
+  background: transparent url("../images/png/image-5.png") 50% 50%/cover;
+  width: 60.46875vw;
+  margin: 3.33333vw auto 0;
+  z-index: 20; }
+
+.gallery__wrapper_bg {
+  background: rgba(14, 11, 39, 0.8);
+  padding: 4.42708vw 5.05208vw 4.58333vw 4.89583vw;
+  max-width: 50.52083vw;
+  margin: 0 auto;
+  z-index: 20; }
+
+.gallery__navs {
+  display: flex;
+  justify-content: space-between;
+  z-index: 20;
+  max-width: 41.66667vw;
+  padding: 1.45833vw 4.42708vw;
+  border: 0.15625vw solid #DFC6F4;
+  margin: 0 auto; }
+
+.gallery__navs li {
+  list-style: none;
+  z-index: 20; }
+
+.gallery__navs a {
+  z-index: 20;
+  background: transparent;
+  border: 0;
+  padding: 0;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: bold;
+  font-size: 1.04167vw;
+  line-height: 1.25vw;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: #DFC6F4;
+  position: relative;
+  transition: 0.3s; }
+
+.gallery__navs a:after {
+  position: absolute;
+  content: '';
+  width: 0;
+  height: 0.10417vw;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: -0.625vw;
+  background: #ffffff;
+  transition: 0.3s; }
+
+.gallery__navs a.active {
+  transition: 0.3s;
+  cursor: pointer;
+  color: #ffffff; }
+
+.gallery__navs a.active:after {
+  transition: 0.3s;
+  width: 100%; }
+
+.gallery__navs a:hover {
+  transition: 0.3s;
+  cursor: pointer;
+  color: #ffffff; }
+
+.gallery__navs a:hover:after {
+  transition: 0.3s;
+  width: 100%; }
