--- a/styles/main.scss
+++ b/styles/main.scss
@@ -65,59 +65,65 @@ body {
   z-index: -1;
 }
 
-.topAnimations {
-  .animation {
-    &_right {
-      position: absolute;
-      top: calculateVw(-400);
-      right: calculateVw(57);
-      z-index: 10;
-      img {
-        width: calculateVw(897);
-        height: calculateVw(897);
-      }
+.svg_animations {
+  .circle-top-left {
+    position: absolute;
+    top: calculateVw(-245);
+    left: calculateVw(-178);
+    z-index: 10;
+    img {
+      width: calculateVw(555);
+      height: calculateVw(555);
     }
-    &_left {
-      position: absolute;
-      top: calculateVw(-245);
-      left: calculateVw(-178);
-      z-index: 10;
-      img {
-        width: calculateVw(555);
-        height: calculateVw(555);
-      }
+  }
+  .circle-top-right {
+    position: absolute;
+    top: calculateVw(-400);
+    right: calculateVw(57);
+    z-index: 10;
+    img {
+      width: calculateVw(897);
+      height: calculateVw(897);
     }
-    &_middle {
-      position: absolute;
-      top: calculateVw(633);
-      right: calculateVw(-910);
-      z-index: 10;
-      img {
-        width: calculateVw(1095);
-        height: calculateVw(1095);
-      }
-      &-left {
-        position: absolute;
-        top: calculateVw(1102);
-        left: calculateVw(-4);
-        z-index: 10;
-        img {
-          width: calculateVw(320);
-          height: calculateVw(303);
-        }
-      }
+  }
+  .circle-center-right {
+    position: absolute;
+    top: calculateVw(633);
+    right: calculateVw(-910);
+    z-index: 10;
+    img {
+      width: calculateVw(1095);
+      height: calculateVw(1095);
     }
-    &_center {
-      position: absolute;
-      top: calculateVw(1466);
-      left: calculateVw(-10);
-      z-index: 0;
-      &_left {
-        position: absolute;
-        top: calculateVw(1614);
-        right: calculateVw(-28);
-        z-index: 0;
-      }
+  }
+  .vector-center-left-1 {
+    position: absolute;
+    top: calculateVw(1102);
+    left: calculateVw(-4);
+    z-index: 10;
+    svg {
+      width: calculateVw(325);
+      height: calculateVw(310);
+    }
+  }
+  .vector-center-left-2 {
+    position: absolute;
+    top: calculateVw(1466);
+    left: calculateVw(-30);
+    z-index: 0;
+    svg {
+      width: calculateVw(419);
+      height: calculateVw(889);
+    }
+  }
+  .vector-center-right {
+    position: absolute;
+    top: calculateVw(1614);
+    right: calculateVw(-28);
+    z-index: 0;
+    svg {
+      width: calculateVw(1962);
+      height: calculateVw(692);
     }
   }
 }
@@ -465,65 +471,161 @@ body {
     margin: 0 auto calculateVw(40);
   }
 }
-.slotMachines {
+.sliders {
   position: relative;
-  width: calculateVw(1110);
-  max-height: calculateVw(470);
-  margin: calculateVw(145) auto 0;
+  width: calculateVw(1170);
+  height: 0;
+  &.active {
+    height: 100%;
+    max-height: calculateVw(470);
+    margin: calculateVw(145) auto 0;
+    .sliders {
+      &__arrowPrev {
+        border-top: calculateVw(21) solid transparent;
+        border-bottom: calculateVw(21) solid transparent;    
+        border-right: calculateVw(26) solid #C6A4E3;
+        &:hover {
+          border-right: calculateVw(26) solid #9E55DD;
+          cursor: pointer;
+        }
+      }
+      &__arrowNext {
+        border-top: calculateVw(21) solid transparent;
+        border-bottom: calculateVw(21) solid transparent;    
+        border-left: calculateVw(26) solid #C6A4E3;
+        &:hover {
+          border-left: calculateVw(26) solid #9E55DD;
+          cursor: pointer;
+        }
+      }
+    }
+  }
   &__wrapper {
     width: 100%;
     max-height: 100%;
     overflow-x: hidden;
   }
-  &__arrowPrev {
+  &__arrowPrev {    
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
     left: calculateVw(-45);
     z-index: 20;
     width: 0; 
-    height: 0; 
-    border-top: calculateVw(21) solid transparent;
-    border-bottom: calculateVw(21) solid transparent;    
-    border-right: calculateVw(26) solid #C6A4E3;
-    &:hover {
-      border-right: calculateVw(26) solid #9E55DD;
-      cursor: pointer;
-    }
+    height: 0;     
   }
-  &__arrowNext {
+  &__arrowNext {    
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
     right: calculateVw(-45);
     z-index: 20;
     width: 0; 
-    height: 0; 
-    border-top: calculateVw(21) solid transparent;
-    border-bottom: calculateVw(21) solid transparent;    
-    border-left: calculateVw(26) solid #C6A4E3;
-    &:hover {
-      border-left: calculateVw(26) solid #9E55DD;
-      cursor: pointer;
+    height: 0;    
+  }
+}
+.slider {
+  margin-right: calculateVw(-300);
+  margin-left: calculateVw(-50);
+  max-height: calculateVw(470);
+  height: 100%;
+  outline: none;
+  .slide {
+    width: calculateVw(470);
+    height: calculateVw(470);
+    padding-right: calculateVw(30);
+    z-index: 20;
+    outline: none;
+    position: relative;
+    span {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(14, 11, 39, 0.4);
+    }
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: 50% 50%;
     }
   }
-  &__slider {
-    margin-right: calculateVw(-300);
-    margin-left: calculateVw(-50);
-    max-height: calculateVw(470);
-  
-    outline: none;
-  
-    .slide {
-      width: calculateVw(470);
-      max-height: calculateVw(470);
-      padding-right: calculateVw(30);
-      outline: none;
-      img {
-        width: 100%;
-        height: 1005;
-        object-fit: cover;
-        object-position: 50% 50%;
+}
+.gallery {
+  &__wrapper {
+    background: transparent url('../images/png/image-5.png') 50% 50%/cover; 
+    width: calculateVw(1161);
+    margin: calculateVw(64) auto 0;
+    z-index: 20;
+  }
+  &__wrapper_bg {  
+    background: rgba(14, 11, 39, 0.8);
+    padding: calculateVw(85) calculateVw(97) calculateVw(88) calculateVw(94);
+    max-width: calculateVw(970);
+    margin: 0 auto;
+    z-index: 20;
+  }
+  &__navs {
+    display: flex;
+    justify-content: space-between;
+    z-index: 20;
+    max-width: calculateVw(800);
+    padding: calculateVw(28) calculateVw(85);
+    border: calculateVw(3) solid #DFC6F4;
+    margin: 0 auto;
+    li {
+      list-style: none;
+      z-index: 20;
+    }
+    a {
+      z-index: 20;
+      background: transparent;
+      border: 0;
+      padding: 0;
+      font-family: "Montserrat";
+      font-style: normal;
+      font-weight: bold;
+      font-size: calculateVw(20);
+      line-height: calculateVw(24);
+      letter-spacing: 0.1em;
+      text-transform: uppercase;
+      color: #DFC6F4;
+
+      position: relative;
+      transition: 0.3s;
+
+      &:after {
+        position: absolute;
+        content: '';
+        width: 0;
+        height: calculateVw(2);
+        left: 50%;
+        transform: translateX(-50%);
+        bottom: calculateVw(-12);
+        background: #ffffff;
+        transition: 0.3s;
+      }
+      &.active {
+        transition: 0.3s;
+        cursor: pointer;
+        color: #ffffff;
+        &:after {
+          transition: 0.3s;
+          width: 100%;
+        }
+      }
+      &:hover {
+        transition: 0.3s;
+        cursor: pointer;
+        color: #ffffff;
+        &:after {
+          transition: 0.3s;
+          width: 100%;
+        }
       }
     }
   }
