--- a/styles/main.scss
+++ b/styles/main.scss
@@ -43,8 +43,8 @@ body {
 .topMainBackground {
   background: rgba(14, 11, 39, 0.8);
   position: absolute;
-  top: calculateVw(63);
-  height: calculateVw(1227);
+  top: calculateVw(762);
+  height: calculateVw(2285);
   width: 100%;
   z-index: -1;
 }
@@ -91,6 +91,7 @@ body {
     top: calculateVw(633);
     right: calculateVw(-910);
     z-index: 10;
+    transform: rotate(180deg);
     img {
       width: calculateVw(1095);
       height: calculateVw(1095);
@@ -175,7 +176,7 @@ body {
   &__nav {
     display: flex;
     align-items: center;
-    perspective: 1000px;
+    perspective: calculateVw(1000);
     button {
       width: calculateVw(16);
       height: calculateVw(13);
@@ -242,18 +243,23 @@ body {
     .number {
       font-size: 0;
       margin-left: calculateVw(10);
-      a {
-        text-decoration: none;
-        font-family: "Lato";
-        font-size: calculateVw(25);
-        font-style: normal;
-        font-weight: 700;
-        line-height: calculateVw(30);
-        letter-spacing: 0.15em;
-        text-align: left;
+      text-decoration: none;
+      font-family: "Lato";
+      font-size: calculateVw(25);
+      font-style: normal;
+      font-weight: 700;
+      line-height: calculateVw(30);
+      letter-spacing: 0.15em;
+      text-align: left; 
+      color: #0029FF;
+      &:hover {
+        color: #0029FF;        
       }
     }
   }
+}
+a {
+  text-decoration: none;
 }
 
 .container {
@@ -282,8 +288,8 @@ body {
     text-align: left;
     color: #e5e5e5;
     text-transform: uppercase;
-    text-shadow: 0px calculateVw(4) calculateVw(4) rgba(0, 0, 0, 0.25),
-      0px calculateVw(4) calculateVw(4) rgba(0, 0, 0, 0.25);
+    text-shadow: calculateVw(0) calculateVw(4) calculateVw(4) rgba(0, 0, 0, 0.25),
+      calculateVw(0) calculateVw(4) calculateVw(4) rgba(0, 0, 0, 0.25);
 
     &:first-line {
       font-family: "Montserrat";
@@ -295,8 +301,8 @@ body {
       text-align: left;
       text-transform: capitalize;
       color: #c4c4c4;
-      text-shadow: 0px calculateVw(4) calculateVw(4) rgba(0, 0, 0, 0.25),
-        0px calculateVw(4) calculateVw(4) rgba(0, 0, 0, 0.25);
+      text-shadow: calculateVw(0) calculateVw(4) calculateVw(4) rgba(0, 0, 0, 0.25),
+        calculateVw(0) calculateVw(4) calculateVw(4) rgba(0, 0, 0, 0.25);
     }
   }
   .text {
@@ -319,7 +325,7 @@ body {
     margin-top: calculateVw(30);
     padding: calculateVw(20) calculateVw(30);
     background: rgba(0, 41, 255, 1);
-    box-shadow: 0px calculateVw(10) calculateVw(15) calculateVw(5)
+    box-shadow: calculateVw(0) calculateVw(10) calculateVw(15) calculateVw(5)
       rgba(0, 0, 0, 0.4);
     border: 0 solid;
     cursor: pointer;
@@ -364,7 +370,7 @@ body {
     span {
       color: #924ace;
     }
-    text-shadow: 0px calculateVw(4) calculateVw(4) rgba(0, 0, 0, 0.25);
+    text-shadow: calculateVw(0) calculateVw(4) calculateVw(4) rgba(0, 0, 0, 0.25);
   }
 }
 .container-lines-right {
@@ -398,7 +404,73 @@ body {
     span {
       color: #924ace;
     }
-    text-shadow: 0px calculateVw(4) calculateVw(4) rgba(0, 0, 0, 0.25);
+    text-shadow: calculateVw(0) calculateVw(4) calculateVw(4) rgba(0, 0, 0, 0.25);
+  }
+}
+.container-lines-center {
+  display: flex;
+  position: relative;
+  &-title {
+    position: absolute;
+    top: calculateVw(100);
+    left: 50%;
+    transform: translateX(-50%);
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 900;
+    font-size: calculateVw(36);
+    line-height: calculateVw(44);
+    text-align: center;
+    text-transform: uppercase;
+
+    color: #FFFFFF;
+
+    text-shadow: calculateVw(0) calculateVw(4) calculateVw(4) rgba(0, 0, 0, 0.25), calculateVw(0) calculateVw(4) calculateVw(4) rgba(0, 0, 0, 0.25);
+    div {
+      color: #924ACE;
+    }
+    .text {
+      font-family: 'Montserrat';
+      font-style: normal;
+      font-weight: normal;
+      font-size: calculateVw(16);
+      line-height: calculateVw(20);
+      text-align: center;
+      letter-spacing: 0.06em;
+      text-transform: uppercase;
+
+      color: #FFFFFF;
+      max-width: calculateVw(500);
+      margin-top: calculateVw(20);
+    }
+  }
+}
+.container-lines-center-left {
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  width: 0;
+  margin-right: auto;
+  hr.custom-line {
+    background-color: #cda2f0;
+    border: none;
+    height: calculateVw(16);
+    width: calculateVw(750);
+    margin: 0;
+  }
+}
+.container-lines-center-right {
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  width: 0;
+  margin-left: auto;
+  hr.custom-line {
+    background-color: #cda2f0;
+    border: none;
+    height: calculateVw(16);
+    width: calculateVw(750);
+    margin: 0;
   }
 }
 .advantages {
@@ -452,7 +524,7 @@ body {
   .slider-arrow {
     font-size: 0;
     cursor: pointer;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    filter: drop-shadow(calculateVw(0) calculateVw(4) calculateVw(4) rgba(0, 0, 0, 0.25));
     &:hover {
       svg {
         path {
@@ -481,20 +553,20 @@ body {
     margin: calculateVw(145) auto 0;
     .sliders {
       &__arrowPrev {
-        border-top: calculateVw(21) solid transparent;
-        border-bottom: calculateVw(21) solid transparent;    
-        border-right: calculateVw(26) solid #C6A4E3;
+        border-top: calculateVw(18) solid transparent;
+        border-bottom: calculateVw(18) solid transparent;    
+        border-right: calculateVw(21) solid #C6A4E3;
         &:hover {
-          border-right: calculateVw(26) solid #9E55DD;
+          border-right: calculateVw(21) solid #9E55DD;
           cursor: pointer;
         }
       }
       &__arrowNext {
-        border-top: calculateVw(21) solid transparent;
-        border-bottom: calculateVw(21) solid transparent;    
-        border-left: calculateVw(26) solid #C6A4E3;
+        border-top: calculateVw(18) solid transparent;
+        border-bottom: calculateVw(18) solid transparent;    
+        border-left: calculateVw(21) solid #C6A4E3;
         &:hover {
-          border-left: calculateVw(26) solid #9E55DD;
+          border-left: calculateVw(21) solid #9E55DD;
           cursor: pointer;
         }
       }
@@ -556,6 +628,7 @@ body {
   }
 }
 .gallery {
+  margin-bottom: calculateVw(130);
   &__wrapper {
     background: transparent url('../images/png/image-5.png') 50% 50%/cover; 
     width: calculateVw(1161);
@@ -626,6 +699,193 @@ body {
           transition: 0.3s;
           width: 100%;
         }
+      }
+    }
+  }
+}
+.slick-list.draggable {
+  .mainSlider__slide:first-c.slick-active {
+    width: calculateVw(200) !important;
+    height: calculateVw(514) !important;
+  } 
+}
+@keyframes fadeIn {
+  0% {
+    // opacity:0;
+    transform: scale(0, 1);
+  }
+  100% {
+    // opacity:1;
+    transform: scale(1, 1);
+  }
+}
+.mainSlider {
+  padding-top: calculateVw(148);
+  padding-bottom: calculateVw(50);
+  width: 100%;
+  margin: 0 auto;
+  max-width: calculateVw(1856);
+  position: relative;
+  &__slide {
+    &.slick-current.slick-center{
+      height: calculateVw(500);
+      width: calculateVw(126) !important;
+      height: calculateVw(591) !important;
+      z-index: 200 !important;
+      position: relative;
+
+      img {
+        position: absolute;
+        left: calculateVw(-435);
+        width: calculateVw(996) !important;
+        height: 100%;        
+        max-height: calculateVw(591) !important;
+        object-fit: cover;
+        object-position: 50% 50%;
+        z-index: 200 !important;
+        animation: fadeIn ease 1s;
+      }
+    }
+    &.slick-slide {
+      z-index: 1;
+      outline: none;
+      width: calculateVw(900);
+      height: calculateVw(591) !important;
+      position: relative;
+      span {
+        width: 100%;
+        height: 100%;
+        max-height: calculateVw(514);
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: rgba(13, 11, 43, 0.63);
+      }
+      img {
+        width: 100%;
+        height: 100%;        
+        max-height: calculateVw(514);
+        object-fit: cover;
+        object-position: 50% 50%;
+        box-shadow: calculateVw(0) calculateVw(4) calculateVw(4) rgba(0, 0, 0, 0.25);       
+      }
+    }
+    
+  }
+  ul.slick-dots {
+    li {
+      margin: 0;
+      height: calculateVw(14);
+      width: calculateVw(14);
+      &.slick-active {
+        height: calculateVw(18);
+        width: calculateVw(18);
+        button {
+          height: calculateVw(18);
+          width: calculateVw(18);
+          &:before {
+            height: calculateVw(18);
+            width: calculateVw(18);
+            content: '';
+            background: url('/images/svg/slider-dots/active-dot.svg') 50% 50% no-repeat;
+          }
+        }
+      }
+      button {
+        height: calculateVw(14);
+        width: calculateVw(14);
+        padding: calculateVw(5);
+        &:before {
+          font-size: calculateVw(6); 
+          line-height: calculateVw(20);
+          content: '';          
+          height: calculateVw(14);
+          width: calculateVw(14);
+          background: url('/images/svg/slider-dots/static-dot.svg') 50% 50% no-repeat;
+          opacity: 1;
+        }
+      }
+    }
+  }
+  &__container {
+    display: flex;
+    margin: calculateVw(48) auto 0;
+    max-width: calculateVw(490);
+  }
+  &__text {
+    max-width: calculateVw(330);
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 900;
+    font-size: calculateVw(25);
+    line-height: calculateVw(30);
+    text-align: center;
+    text-transform: uppercase;
+
+    color: #FFFFFF;
+
+    text-shadow: calculateVw(0) calculateVw(4) calculateVw(4) rgba(0, 0, 0, 0.25), calculateVw(0) calculateVw(4) calculateVw(4) rgba(0, 0, 0, 0.25);
+    span {
+      color: #9E55DD;
+    }
+  }
+  &__arrowPrev {
+    height: 100%;
+    display: flex;
+    &:hover {
+      cursor: pointer;
+      .arrow {
+        border-right: calculateVw(21) solid #9E55DD;
+      }
+    }
+    .arrow {
+      margin-right: calculateVw(21);
+      border-top: calculateVw(18) solid transparent;
+      border-bottom: calculateVw(18) solid transparent;    
+      border-right: calculateVw(21) solid #C6A4E3;      
+    }     
+  }
+  &__arrowNext {
+    height: 100%;
+    display: flex;
+    &:hover {
+      cursor: pointer;
+      .arrow {
+        border-left: calculateVw(21) solid #9E55DD;
+      }
+    }
+    .arrow {
+      margin-left: calculateVw(21);
+      border-top: calculateVw(18) solid transparent;
+      border-bottom: calculateVw(18) solid transparent;    
+      border-left: calculateVw(21) solid #C6A4E3;      
+    } 
+  }
+  &__button {
+    margin: 0 auto;
+    text-align: center;
+    margin-top: calculateVw(23);
+    button {
+      background: #C6A4E3;
+      padding: calculateVw(17) calculateVw(48);
+      border: none;
+      outline: none;
+  
+      font-family: "Montserrat";
+      font-style: normal;
+      font-weight: bold;
+      font-size: 13px;
+      line-height: 16px;
+      /* identical to box height */
+  
+      letter-spacing: 0.06em;
+      text-transform: uppercase;
+  
+      color: #0E0B28;
+      &:hover {
+        cursor: pointer;
       }
     }
   }
